<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<!-- Required license above. -->
<resources>
    <string name="app_name">NaviSight</string>
    <string name="app_version">Version Something :3</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <!--    Tooltips -->
    <string name="preview_mode_tooltip_title">Preview Mode</string>
    <string name="preview_mode_tooltip_1">Tap me to instantly enter screensaver mode.</string>
    <string name="preview_mode_tooltip_2">If there are no interactions within 10 seconds, the app will enter screensaver mode.</string>
    <string name="screensaver_mode_tooltip_title">NaviSight is active</string>
    <string name="screensaver_mode_tooltip_1">NaviSight is currently on screensaver mode to save power.</string>
    <string name="screensaver_mode_tooltip_2">Swipe to Left to interact with the menu!</string>
    <string name="screensaver_mode_tooltip_3">For live preview mode, please tap the screen.</string>

    <string name="guest_mode_tooltip_1">Swipe Left to Login!</string>


    <string name="camera_accessibility_hint">Camera View. Double tap to toggle screensaver. Double tap and hold for menu. Swipe left for profile.</string>


    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>


    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>YOLOv11</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_bottom_sheet_control">Warning: The terms here are simplified and a maxed out setting does not guarantee 100% detection accuracy.</string>


</resources>
