<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fillStart"/>

    <edu.capstone.navisight.common.objectdetection.OverlayView
        android:id="@+id/overlay"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/preview_mode_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:background="@android:color/transparent" >
        <LinearLayout
            android:id="@+id/icon_and_tooltips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="225dp"
            >
            <ImageView
                android:id="@+id/screensaver_eye_and_preview_lock"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:src="@drawable/ic_screensaver_eye"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/tooltip_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/preview_mode_tooltip_color"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/preview_mode_tooltip_title" />
            <TextView
                android:id="@+id/tooltip_description_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/preview_mode_tooltip_color"
                android:gravity="center"
                android:text="@string/preview_mode_tooltip_1" />
            <TextView
                android:id="@+id/tooltip_description_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/preview_mode_tooltip_color"
                android:text="@string/preview_mode_tooltip_2" />


        </LinearLayout>
        <ImageView
            android:id="@+id/tts_status_icon"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_mute"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />
        <TextView
            android:id="@+id/tts_status_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:textColor="@color/preview_mode_tooltip_color"
            android:text="In-app Text-to-Speech disabled. Re-enable on quick menu." />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/quick_menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        />

    <View
        android:id="@+id/touch_interceptor_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/camera_accessibility_hint"
        android:background="@android:color/transparent"
        />

    <ImageView
        android:id="@+id/ball_force_detect"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/quick_menu_action_ball"
        android:padding="15dp"
        android:src="@drawable/ic_force_detect"
        app:tint="@color/white"
        android:contentDescription="Quick action #3"
        app:backgroundTint="@color/royal_purple"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_gravity="top|start"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/ball_automatic_flash"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/quick_menu_action_ball"
        android:padding="15dp"
        android:src="@drawable/ic_automatic_flash"
        app:tint="@color/green"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:contentDescription="Quick action #2"
        app:backgroundTint="@color/light_green"
        android:layout_gravity="top|end" />

    <include
        android:id="@+id/bottom_sheet_layout"
        android:visibility="gone"
        layout="@layout/dialog_detection_settings" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>